# local-webcam-emotion-gesture-detector

./: .gitignore  README.fr.md  README.md  main.py  pyproject.toml
config/: config.yaml
src/: __init__.py  base_analyzer.py  capture.py  data_models.py  debug_renderer.py  emotion_analyzer.py  emotion_analyzer_cnn.py  gesture_analyzer.py  holistic_analyzer.py  pipeline.py  posture_analyzer.py  presence_analyzer.py  settings.py  utils.py
